syntax = "proto3";

package ai.bale.protos;

service KeyValue {
    rpc Set (SetRequest) returns (Ack) {
    }
    rpc Get (GetRequest) returns (GetReply) {
    }
    rpc Remove (RemoveRequest) returns (Ack) {
    }
    rpc Increase (IncreaseRequest) returns (IncreaseReply) {
    }
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message GetRequest {
    string key = 1;
}

message GetReply {
    string result = 1;
}

message IncreaseReply {
    string result = 1;
}

message RemoveRequest {
    string key = 1;
}

message IncreaseRequest {
    string key = 1;
}

message Ack {
    string result = 1;
}